Changed the Project Section of the website

--- a/index.html
+++ b/index.html
@@ -215,33 +215,86 @@
         <section id="projects" class="py-5 bg-light">
             <div class="container">
                 <h2 class="fw-bold text-center mb-4">Projects</h2>
-                <div class="row g-4">
-                    <!-- Project 1 -->
-                    <div class="col-md-6">
-                        <div class="card shadow-sm">
-                            <img src="img/project1.jpg" class="card-img-top" alt="Bike Rental Website">
+                <div class="row">
+                    <!-- Bike Rental System -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Bike Rental Website</h5>
-                                <p class="card-text">A responsive website featuring Supabase integration, Google Maps
-                                    API, and MQTT for real-time updates. Users can register, subscribe to newsletters,
-                                    and view bike shop locations in Dublin.</p>
-                                <a href="https://bike-rental-supabase-mqtt-git-main-ricardodanganan.vercel.app/"
-                                    target="_blank" class="btn btn-primary">View Demo</a>
-                                <a href="https://github.com/ricardodanganan/BikeRental-Supabase-MQTT" target="_blank"
-                                    class="btn btn-outline-secondary">GitHub</a>
+                                <h5 class="card-title fw-bold">Bike Rental System</h5>
+                                <p class="card-text">
+                                    My final project for my second year, the Bike Rental System, is a responsive,
+                                    user-friendly website
+                                    that allows users to browse, book, subscribe to newsletters, and manage bike
+                                    rentals. Features include
+                                    user registration with Supabase, Google Maps API integration for browsing rental
+                                    locations, and real-time
+                                    updates on bike availability and pricing using MQTT.
+                                </p>
+                                <p>
+                                    <span class="badge bg-info text-dark">CSS (33.7%)</span>
+                                    <span class="badge bg-warning text-dark">JavaScript (31.6%)</span>
+                                    <span class="badge bg-primary">HTML (23.5%)</span>
+                                    <span class="badge bg-dark">Shell (10.8%)</span>
+                                    <span class="badge bg-secondary">Python (0.4%)</span>
+                                </p>
+                                <a href="https://github.com/YourGitHubLink/Bike-Rental-System" target="_blank"
+                                    class="btn btn-primary">View on GitHub</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Additional Projects Placeholder -->
-                    <div class="col-md-6">
-                        <div class="card shadow-sm">
-                            <img src="img/project2.jpg" class="card-img-top" alt="Project 2">
+                    <!-- Java Text-Based RPG -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Project 2</h5>
-                                <p class="card-text">[Brief description of another project. Replace this placeholder
-                                    text with actual details.]</p>
-                                <a href="#" class="btn btn-primary">View Demo</a>
-                                <a href="#" class="btn btn-outline-secondary">GitHub</a>
+                                <h5 class="card-title fw-bold">Java Text-Based RPG</h5>
+                                <p class="card-text">
+                                    Part of my final project for the Computer Science PLC, this project focuses on a
+                                    text-based
+                                    old-school RPG built entirely using Java. The game emphasizes user interaction
+                                    through text commands
+                                    and features story progression, enemy encounters, and inventory management.
+                                </p>
+                                <p>
+                                    <span class="badge bg-warning text-dark">Java (100%)</span>
+                                </p>
+                                <a href="https://github.com/YourGitHubLink/Java-Text-Based-RPG" target="_blank"
+                                    class="btn btn-primary">View on GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- First Year Web Development Project -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">First Year Web Development Project</h5>
+                                <p class="card-text">
+                                    Part of my first-year web development module, this project highlights the modules I
+                                    took during my
+                                    first year. It features an elegant, responsive design using HTML and CSS and serves
+                                    as an introduction
+                                    to web development concepts like semantic structure, styling, and accessibility.
+                                </p>
+                                <p>
+                                    <span class="badge bg-info text-dark">CSS (52.6%)</span>
+                                    <span class="badge bg-danger">HTML (47.4%)</span>
+                                </p>
+                                <a href="https://github.com/YourGitHubLink/First-Year-Web-Dev-Project" target="_blank"
+                                    class="btn btn-primary">View on GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Gaming Dashboard Overview -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Gaming Dashboard Overview</h5>
+                                <p class="card-text">
+                                    This project was my Final project for 4th year, Its a comprehensive gaming dashboard for Steam users that combines game optimization,
+                                    game management, community interaction, and analytics. This platform serves as a
+                                    central hub for managing the gaming experience, including game recommendations,
+                                    performance monitoring, price tracking, and community engagement. This project was still in Development.
+                                </p>
+                                <span class="badge bg-success">In Development</span>
                             </div>
                         </div>
                     </div>
