Change some few things like Colour theme, Skills section etc.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <!-- Name and Title -->
             <h1 class="fw-bold">Ricardo Danganan Jnr</h1>
-            <p class="text-muted mb-3">BSc (Hons) Computing with IT Management | 4th Year Computing Student</p>
+            <p class="text-light mb-3">BSc (Hons) Computing with IT Management | 4th Year Computing Student</p>
 
             <!-- Buttons -->
             <div>
@@ -74,25 +74,25 @@
     <!-- Main Content Placeholder -->
     <main class="container my-5">
         <!-- About Me Section -->
-        <section class="py-5 bg-light" id="about">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4">
-                        <h2 class="fw-bold">About Me</h2>
-                        <p class="lead">
-                            I'm a motivated computing student with a diverse skill set in web design, database
-                            management, scripting, and networking. I thrive on continuous learning in the ever-evolving
-                            ICT landscape. My strengths lie in teamwork, communication, and willingness to learn. I'm
-                            eager to contribute and grow in a professional environment.
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <img src="img/profile-photo.jpg" alt="Ricardo Danganan Jnr"
-                            class="img-fluid rounded-circle shadow">
-                    </div>
-                </div>
+        <section id="about" class="py-5 bg-light">
+            <div class="container d-flex align-items-center">
+              <div>
+                <h2 class="fw-bold">About Me</h2>
+                <p>
+                  I'm a motivated computing student with a diverse skill set in web design,
+                  database management, scripting, and networking. I thrive on continuous
+                  learning in the ever-evolving ICT landscape. My strengths lie in teamwork,
+                  communication, and willingness to learn. I'm eager to contribute and grow
+                  in a professional environment.
+                </p>
+              </div>
+              <img
+                src="img/Logo.jpg"
+                alt="Profile Banner"
+                class="img-fluid"
+              />
             </div>
-        </section>
+          </section>          
         <!-- End of About Me Section -->
 
         <!-- Skills Section -->
@@ -108,14 +108,14 @@
                     </div>
                     <div class="col-md-4">
                         <div class="p-3 border rounded bg-light">
-                            <h5 class="fw-bold">Scripting</h5>
-                            <p>Bash Shell, Python</p>
+                            <h5 class="fw-bold">Cloud Security & Scripting</h5>
+                            <p>Bash, PowerShell, Hypervisors & VMs, Cybersecurity</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="p-3 border rounded bg-light">
-                            <h5 class="fw-bold">Networking</h5>
-                            <p>Fundamentals, Oracle SQL</p>
+                            <h5 class="fw-bold">Database Management & Networking</h5>
+                            <p>SQL, MongoDB, Cisco Networking</p>
                         </div>
                     </div>
                 </div>
@@ -139,13 +139,19 @@
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#educationAccordion">
                             <div class="accordion-body">
+                                <p class="mb-1">
+                                    <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo" class="me-2"
+                                        style="width: 25px; height: 25px;">
+                                    <strong>Technological University Dublin · June 2024</strong>
+                                </p>
                                 <ul>
-                                    <li>W Server-side Web Development - A</li>
-                                    <li>W Operating Systems - C+</li>
-                                    <li>W Cloud Service & Distributed Computing - B+</li>
-                                    <li>W Big Data Technologies - A</li>
+                                    <li>Server-side Web Development - A</li>
+                                    <li>Operating Systems - C+</li>
+                                    <li>Cloud Service & Distributed Computing - B+</li>
+                                    <li>Big Data Technologies - A</li>
                                     <li>Data Analysis - A</li>
-                                    <li>W Advanced Routing & Switching - B+</li>
+                                    <li>Advanced Routing & Switching - B+</li>
+                                    <li>Internship Programme - 30 Credits</li>
                                 </ul>
                             </div>
                         </div>
@@ -155,12 +161,17 @@
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Second Year Modules (GPA: 3.68)
+                                Second Year Modules (GPA: 3.62)
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#educationAccordion">
                             <div class="accordion-body">
+                                <p class="mb-1">
+                                    <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo" class="me-2"
+                                        style="width: 25px; height: 25px;">
+                                    <strong>Technological University Dublin · June 2023</strong>
+                                </p>
                                 <ul>
                                     <li>Project - A</li>
                                     <li>Routing and Switching Essentials - A</li>
@@ -183,12 +194,17 @@
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                First Year Modules (GPA: 3.62)
+                                First Year Modules (GPA: 3.68)
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                             data-bs-parent="#educationAccordion">
                             <div class="accordion-body">
+                                <p class="mb-1">
+                                    <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo" class="me-2"
+                                        style="width: 25px; height: 25px;">
+                                    <strong>Technological University Dublin · June 2022</strong>
+                                </p>
                                 <ul>
                                     <li>Software Development 1 - A</li>
                                     <li>Discrete Mathematics 1 - B</li>
@@ -222,12 +238,12 @@
                                     <h5 class="fw-bold">Best Future Solution Award</h5>
                                     <p class="text-muted">
                                         Health Hackathon in Collaboration with Tallaght University Hospital &
-                                        Amazon Web Services (AWS) · Oct 2024
+                                        Amazon Web Services (AWS)
                                     </p>
                                     <p class="mb-1">
                                         <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo" class="me-2"
                                             style="width: 25px; height: 25px;">
-                                        <strong>Technological University Dublin</strong>
+                                        <strong>Technological University Dublin · Oct 2024</strong>
                                     </p>
                                     <p>
                                         Recognized for an innovative wayfinding solution to enable better navigation to healthcare 
@@ -240,16 +256,15 @@
                                 <div>
                                     <h5 class="fw-bold">Full Distinction - QQI Level 6 in Computer Networks</h5>
                                     <p class="text-muted">
-                                        Bray Institute of Further Education · Dec 2021
+                                        Bray Institute of Further Education
                                     </p>
                                     <p class="mb-1">
                                         <img src="img/Bife-Logo.png" alt="BIFE Logo" class="me-2"
                                             style="width: 25px; height: 25px;">
-                                        <strong>Bray Institute of Further Education</strong> · June 2021
+                                        <strong>Bray Institute of Further Education · June 2021</strong>
                                     </p>
                                     <p>
-                                        I completed a Full Distinction for QQI Level 6 in Computer Networks course 
-                                        during the 2020-2021 academic year from Bray Institute of Further Education, 
+                                        Recognized for outstanding performance in the QQI Level 6 in Computer Networks,  
                                         Showing my good technical skills, a willingness to learn and a passion for Computing.
                                     </p>
                                 </div>
@@ -257,16 +272,15 @@
                                 <div>
                                     <h5 class="fw-bold">Full Distinction - QQI Level 5 Computer Science</h5>
                                     <p class="text-muted">
-                                        Bray Institute of Further Education · Dec 2020
+                                        Bray Institute of Further Education
                                     </p>
                                     <p class="mb-1">
                                         <img src="img/Bife-Logo.png" alt="BIFE Logo" class="me-2"
                                             style="width: 25px; height: 25px;">
-                                        <strong>Bray Institute of Further Education</strong> · June 2020
+                                        <strong>Bray Institute of Further Education · June 2020</strong>
                                     </p>
                                     <p>
-                                        I completed a Full Distinction for QQI Level 5 Computer Science course
-                                        during the 2029-2020 academic year from Bray Institute of Further Education, 
+                                        Recognized for outstanding performance in the QQI Level 5 Computer Science,  
                                         Showing my good technical skills, a willingness to learn and a passion for Computing.
                                     </p>
                                 </div>
