Changed the format and colour schemes of the project section and modules and grades

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- End of Hero Section -->
 
     <!-- Main Content Placeholder -->
-    <main class="container my-5">
+    <main class="container my-0">
 
         <!-- About Me Section -->
         <section id="about" class="py-5">
@@ -105,8 +105,11 @@
 
         <!-- Skills Section -->
         <section class="py-5" id="skills">
+
+            <hr class="section-divider"> <!-- Section Divider -->
+
             <div class="container">
-                <h2 class="fw-bold text-center mb-4">Skills</h2>
+                <h2 class="fw-bold text-center text-primary mb-4">Skills</h2>
                 <div class="row text-center">
                     <div class="col-md-4">
                         <div class="skill-card">
@@ -132,9 +135,12 @@
         <!-- End of Skills Section -->
 
         <!-- Education Section -->
-        <section id="education" class="py-5 bg-light">
+        <section id="education" class="py-5">
+
+            <hr class="section-divider"> <!-- Section Divider -->
+
             <div class="container">
-                <h2 class="fw-bold text-center mb-4">Module Grades and Honors</h2>
+                <h2 class="fw-bold text-center text-primary mb-4">Module Grades and Honors</h2>
                 <div class="accordion" id="educationAccordion">
                     <!-- Third Year -->
                     <div class="accordion-item">
@@ -142,6 +148,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Third Year Modules (GPA: 3.48)
+                                <span class="accordion-icon"></span>
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -164,6 +171,7 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- Second Year -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
@@ -306,9 +314,12 @@
         <!-- End of Education Section -->
 
         <!-- Projects Section -->
-        <section id="projects" class="py-5 bg-light">
+        <section id="projects" class="py-5">
+
+            <hr class="section-divider"> <!-- Section Divider -->
+
             <div class="container">
-                <h2 class="fw-bold text-center mb-4">Projects</h2>
+                <h2 class="fw-bold text-center text-primary mb-4">Projects</h2>
                 <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
                     <!-- Carousel Indicators -->
                     <div class="carousel-indicators">
@@ -431,6 +442,8 @@
                             style="filter: invert(100%);"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
+                    <!-- End of Carousel Controls -->
+
                 </div>
             </div>
         </section>
