changed the icon of the carousel control to match the colour scheme background

--- a/index.html
+++ b/index.html
@@ -430,16 +430,15 @@
                     </div>
 
                     <!-- Carousel Controls -->
-                    <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel"
+                    <!-- Carousel Controls -->
+                    <button class="carousel-control-prev custom-prev" type="button" data-bs-target="#projectsCarousel"
                         data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"
-                            style="filter: invert(100%);"></span>
+                        <img src="img/previous-3.png" alt="Previous" class="custom-arrow">
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel"
+                    <button class="carousel-control-next custom-next" type="button" data-bs-target="#projectsCarousel"
                         data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"
-                            style="filter: invert(100%);"></span>
+                        <img src="img/next-3.png" alt="Next" class="custom-arrow">
                         <span class="visually-hidden">Next</span>
                     </button>
                     <!-- End of Carousel Controls -->
