Made some few tweaks on the work and education section

--- a/index.html
+++ b/index.html
@@ -430,7 +430,6 @@
                     </div>
 
                     <!-- Carousel Controls -->
-                    <!-- Carousel Controls -->
                     <button class="carousel-control-prev custom-prev" type="button" data-bs-target="#projectsCarousel"
                         data-bs-slide="prev">
                         <img src="img/previous-3.png" alt="Previous" class="custom-arrow">
@@ -450,20 +449,23 @@
 
         <!-- Education and Work Experience Section -->
         <section id="education-experience" class="py-5">
+
+            <hr class="section-divider"> <!-- Section Divider -->
+
             <div class="container">
-                <h2 class="fw-bold text-center mb-4">Education and Work Experience</h2>
+                <h2 class="fw-bold text-center text-primary mb-4">Education and Work Experience</h2>
                 <div class="row">
                     <!-- Work Experience Section -->
                     <div class="col-md-6">
-                        <h3 class="fw-bold">Work Experience</h3>
+                        <h3 class="fw-bold text-light text-center mb-4">Work Experience</h3>
                         <div class="timeline">
                             <!-- Typetec -->
                             <div class="timeline-item mb-4 d-flex">
                                 <img src="img/typetec_logo.jpg" alt="Typetec Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">Intern Technical Support Engineer</h5>
-                                    <p class="text-muted">Typetec (Jan 2024 - Aug 2024, 8 months)</p>
+                                    <h5 class="fw-bold text-primary">Intern Technical Support Engineer</h5>
+                                    <p class="text-light">Typetec (Jan 2024 - Aug 2024, 8 months)</p>
                                     <p>Dublin, Ireland (On-site)</p>
                                     <p>IT Desktop Support, Cybersecurity Monitoring, Installations and Managing User
                                         Accounts.</p>
@@ -474,8 +476,8 @@
                                 <img src="img/kkr_logo.jpg" alt="KKR Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">IT Support Engineer</h5>
-                                    <p class="text-muted">KKR (Jun 2024 - July 2024, 2 months)</p>
+                                    <h5 class="fw-bold text-primary">IT Support Engineer</h5>
+                                    <p class="text-light">KKR (Jun 2024 - July 2024, 2 months)</p>
                                     <p>Dublin, Ireland (On-site)</p>
                                     <p>On-Site IT Support, Network Monitoring and Troubleshooting.</p>
                                 </div>
@@ -485,8 +487,8 @@
                                 <img src="img/currysplc_logo.jpg" alt="Currys Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">IT Hardware Sales Associate</h5>
-                                    <p class="text-muted">Currys plc (Nov 2019 - Apr 2020, 6 months)</p>
+                                    <h5 class="fw-bold text-primary">IT Hardware Sales Associate</h5>
+                                    <p class="text-light">Currys plc (Nov 2019 - Apr 2020, 6 months)</p>
                                     <p>Bray, Ireland (On-site)</p>
                                     <p>Hardware Solutions and Customer Service.</p>
                                 </div>
@@ -496,8 +498,8 @@
                                 <img src="img/firstcare_ireland_logo.jpg" alt="FirstCare Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">Healthcare Assistant</h5>
-                                    <p class="text-muted">FirstCare Ireland (Mar 2012 - Jun 2019, 7 years 4 months)</p>
+                                    <h5 class="fw-bold text-primary">Healthcare Assistant</h5>
+                                    <p class="text-light">FirstCare Ireland (Mar 2012 - Jun 2019, 7 years 4 months)</p>
                                     <p>Wicklow, Ireland (On-site)</p>
                                     <p>Communication and Teamwork.</p>
                                 </div>
@@ -506,15 +508,15 @@
                     </div>
                     <!-- Education Section -->
                     <div class="col-md-6">
-                        <h3 class="fw-bold">Education</h3>
+                        <h3 class="fw-bold text-light text-center mb-4">Education</h3>
                         <div class="timeline">
                             <!-- Technological University Dublin -->
                             <div class="timeline-item mb-4 d-flex">
                                 <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo"
                                     class="me-3" style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">Technological University Dublin</h5>
-                                    <p class="text-muted">Bachelor of Science (Honours), Computer/IT Management (Sep
+                                    <h5 class="fw-bold text-primary">Technological University Dublin</h5>
+                                    <p class="text-light">Bachelor of Science (Honours), Computer/IT Management (Sep
                                         2021 - Jun 2025)</p>
                                     <p>Bash/Powershell Scripting, Web Development, Networking, Database Management,
                                         Programming</p>
@@ -525,8 +527,8 @@
                                 <img src="img/Bife-Logo.png" alt="Bray Institute Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">Bray Institute of Further Education</h5>
-                                    <p class="text-muted">QQI Level 6 in Computer Networks (Sep 2020 - May 2021)</p>
+                                    <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
+                                    <p class="text-light">QQI Level 6 in Computer Networks (Sep 2020 - May 2021)</p>
                                     <p>Powershell Scripting, Web Development, Networking, Mobile app development.</p>
                                 </div>
                             </div>
@@ -535,8 +537,8 @@
                                 <img src="img/Bife-Logo.png" alt="Bray Institute Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
-                                    <h5 class="fw-bold">Bray Institute of Further Education</h5>
-                                    <p class="text-muted">QQI Level 5 in Computer Systems (Sep 2019 - May 2020)</p>
+                                    <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
+                                    <p class="text-light">QQI Level 5 in Computer Systems (Sep 2019 - May 2020)</p>
                                     <p>Web Development, Networking, Programming.</p>
                                 </div>
                             </div>
@@ -546,46 +548,8 @@
             </div>
         </section>
         <!-- End of Education and Work Experience Section -->
-
-        <!-- Contact Section -->
-        <section id="contact" class="py-5">
-            <div class="container">
-                <h2 class="fw-bold text-center mb-4">Contact Me</h2>
-                <div class="row justify-content-center">
-                    <div class="col-md-6">
-                        <!-- Contact Form -->
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="Enter your name"
-                                    required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter your email"
-                                    required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label">Message</label>
-                                <textarea class="form-control" id="message" rows="4" placeholder="Your message"
-                                    required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Send Message</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="text-center mt-4">
-                    <p>You can also reach me via email or phone:</p>
-                    <p><strong>Main Email:</strong> <a
-                            href="mailto:ricardo_danganan@yahoo.com">ricardo_danganan@yahoo.com</a></p>
-                    <p><strong>Student Email:</strong> <a
-                            href="mailto:x00191395@mytudublin.ie">x00191395@mytudublin.ie</a></p>
-                    <p><strong>Phone:</strong> +353-862171512</p>
-                </div>
-            </div>
-        </section>
-        <!-- End of Contact Section -->
     </main>
+    <!-- End of Main Content Placeholder -->
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
